fixed z-index wrap-new

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -619,7 +619,7 @@ body {
     position: absolute;
     top: 12px;
     left: 10px;
-    z-index: 99999;
+    z-index: 10;
 }
 
 .product__label-new,
